# deep-workflow

./: .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  README.md  manage.py  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json  wsgi.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
core/: admin.py  forms.py  health.py  logging.py  middleware.py  models.py  urls.py  views.py
core/management/commands/: check_database.py
core/migrations/: 0001_initial.py  0002_dailysheet_worksession_and_more.py  0003_worksession_active_started_at_and_more.py
core/tests/: test_auth.py  test_daily_sheet_views.py  test_deployment.py  test_management_commands.py  test_middleware.py  test_models.py  test_scripts.py  test_views.py
deep_workflow/: asgi.py  deployment.py  settings.py  urls.py  wsgi.py
scripts/: transfer-django-data.sh  vercel-build.sh
static/css/: app.css
static/js/: pwa_install.js  session_timer.js
templates/: base.html  service-worker.js
templates/core/: home.html  preferences.html
templates/registration/: login.html
