[project]
name = "deep-workflow"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django>=5.2,<5.3",
    "django-environ>=0.11,<0.12",
    "psycopg[binary]>=3.2,<3.3",
    "whitenoise>=6.9,<6.10",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["core", "deep_workflow"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "deep_workflow.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
