[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-workflow"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dynamic = ["dependencies"]

[tool.setuptools]
packages = {find = {include = ["core*", "deep_workflow*"]}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["core", "deep_workflow"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "deep_workflow.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
